--- a/style.css
+++ b/style.css
@@ -91,6 +91,33 @@ font-size:17px;
     height:25px;
     border-radius:50%;
     background-color:#888;
-
+}
+.second{
+    width: 100%;
+    height: 100vh calc(100vh - 200px);
+    color:#fff;
+    padding-top: 200px;
+    padding-right:10vw ;
+    background-color: black;
+}
+.elem{
+    width: 100%;
+    border-top: 1px solid gray;
+    padding: 3.5vw 3vw;
+    padding-right:0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.elem h1{
+    text-transform: uppercase;
+    font-size: 7.6vw;
+    opacity:.7;
+}
+.elem h5{
+    font-size:1.5vw;
+}
+.elem-last{
+border-bottom: 1px solid gray;
 }
 
