--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ html , body{
     width: fit-content;
     overflow: hidden;
 }
-.bounding .bounding-elem{
+.bounding .boundingelem{
     transform: translateY(100%);
 }
 .main{
@@ -145,8 +145,10 @@ font-size:17px;
 border-bottom: 1px solid gray;
 }
 .elem img{
+    /* opacity: 1; */
     display: none;
-    height:40%;
+    width:30%;
+    height:20%;
     z-index: 999;
     position: absolute;
 }
