--- a/style.css
+++ b/style.css
@@ -146,8 +146,8 @@ border-bottom: 1px solid gray;
 }
 .elem img{
     /* opacity: 1; */
-    width:30%;
-    height:20%;
+    width:400px;
+    height:400px;
     z-index: 999;
     position: absolute;
 }
