--- a/style.css
+++ b/style.css
@@ -1,24 +1,26 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: Skyfont;
+    font-family: Hunter;
     box-sizing: border-box;
 }
 @font-face {
-    font-family:Skyfont;
-    src: url(./font/Skyscapers.ttf);
+    font-family:Hunter;
+    src: url(./font/CryptoHunterSlantItalic-aYYrm.ttf);
 }
+
+
 html , body{
     height: 100%;
     width: 100%;
 }
 .mini-circle{
     transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
-    width:10px;
-    height: 10px;
+    width:50px;
+    height: 50px;
     position: absolute;
     z-index: 99999;
-    border-radius:50%;
+    border-radius:20%;
     background-color: #fff;
 }
 .bounding{
@@ -46,18 +48,34 @@ html , body{
     align-items: center;
     color:white;
     padding:20px 40px;
+    list-style: none;
 }
 .nav a{
+    position: relative;
     text-decoration: none;
-    font-size:18px;
+    font-size:25px;
     color: #fff;
+    transition: all ease 0.5s;
+}
+.nav a::before{
+    position: absolute;
+    content:'';
+    height: 4px;
+    width:0%;
+    background-color: #fff;
+    left: 0;
+    bottom: 0;
+    transition: all ease 0.5s;
+}
+.nav:hover a::before {
+    width: 100%;
 }
 .heading{
     margin-top:90px;
 }
 .heading h1{
     margin-left:30px;
-    font-size:10vw;
+    font-size:9vw;
     opacity: .6;
     text-transform: uppercase;
     line-height: 1;
@@ -95,13 +113,30 @@ font-size:17px;
     position: absolute;
     bottom:3%;
     display: flex;
+    font-size: larger;
     align-items: center;
+    list-style: none;
     justify-content: space-between;
 }
 .hero-footer a{
     color:#fff;
+    position: relative;
     text-transform: uppercase;
     text-decoration: none;
+}
+.hero-footer a::before {
+    position: absolute;
+    content: '';
+    height: 4px;
+    width: 0%;
+    background-color: #fff;
+    left: 0;
+    bottom: 0;
+    transition: all ease 0.5s;
+}
+
+.hero-footer:hover a::before {
+    width: 100%;
 }
 .hero-footer .iconset{
     display: flex;
@@ -145,10 +180,11 @@ font-size:17px;
 border-bottom: 1px solid gray;
 }
 .elem img{
-    /* opacity: 1; */
-    width:400px;
-    height:400px;
+    width:24vw;
+    height:41vh;
+    /* display: none; */
     z-index: 999;
+    border-radius:20%;
     position: absolute;
 }
 .about{
@@ -203,7 +239,7 @@ border-bottom: 1px solid gray;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 40px 30px;
+    padding: 10 0px 30px;
     background-color: black;
     color: #fff;
 }
